--- a/src/components/accessibility/AccessibilityButton.css
+++ b/src/components/accessibility/AccessibilityButton.css
@@ -1,41 +1,56 @@
 .accessibility-button {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    z-index: 1000;
-    background-color: white; /* Explicitly set background color */
-    padding: 10px;
-    border-radius: 50%;
-  }
-  
-  .accessibility-button button {
-    display: flex;
-    align-items: center;
-  }
-  
-  .accessibility-button button svg {
-    margin-right: 8px;
-  }
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  /* z-index: 10;
+  background-color: white;  */
+  padding: 10px;
+  border-radius: 50%;
+}
 
-  .invert-colors {
-    filter: invert(100%);
-    background-color: black;
-  }
-  .enlarge-text {
-    font-size: 1.5em;
-  }
-  .accessibility-button .reading-icon {
-    position: fixed;
-    bottom: 16px;
-    right: 16px;
-    z-index: 1000;
-  } 
+.accessibility-button button {
+  display: flex;
+  align-items: center;
+}
 
-  @keyframes fadeInOut {
-    0%, 100% {
+.accessibility-button button svg {
+  margin-right: 8px;
+}
+
+.invert-colors {
+  filter: invert(100%);
+  background-color: black;
+}
+
+.enlarge-text {
+  font-size: 1.5em;
+}
+
+.accessibility-button .reading-icon {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  z-index: 1000;
+}
+
+@keyframes fadeInOut {
+  0%, 100% {
       opacity: 1;
-    }
-    50% {
-      opacity: 0.5;
-    }
   }
+  50% {
+      opacity: 0.5;
+  }
+}
+
+.accessibility-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+
+
+.accessibility-button .MuiButton-containedPrimary:hover {
+  background-color: darkviolet !important;
+}
